# order_service

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py
app/core/exceptions/: __init__.py  custom_exceptions.py
app/core/models/: order.py  order_association.py  product.py  user.py
app/core/schemas/: order_schema.py  product_schema.py  user_schema.py
app/migrations/: env.py
app/migrations/versions/: 5fde5e945a26_initial_migration.py  688eafb9b5f3_add_relationship_between_order_and_.py  6eaf56a20790_your_migration_message.py  bf9bbb538bc9_add_ordered_quantity_to_order_product_.py
app/repositories/: order_repository.py  product_repository.py  user_repository.py
app/routers/: api.py  auth.py  exception_handlers.py  orders.py
app/services/: auth.py  auth_service.py  order_service.py  product_service.py
app/tests/: test_auth_service.py  test_endpoints.py  test_order_service.py
app/utils/: auth_utils.py  logged_base_model.py  metrics_middleware.py
